# Cross-Platform-Communication-Layer

./: CMakeLists.txt  readme.md
cmake/: build-platforms.cmake
doc/: Doxyfile
inc/: ApplicationProtocol.hpp  Connection.hpp  ConnectionTCP.hpp  MotorPort.hpp  SerialException.hpp  SerialPort.hpp  ServerSocket.hpp  Socket.hpp  SocketException.hpp
proto/: CMakeLists.txt  message.proto
src/: ApplicationProtocol.cpp  CMakeLists.txt  Connection.cpp  ConnectionTCP.cpp  ServerSocket.cpp  Socket.cpp  SocketException.cpp  clientConnection.cpp  clientProbuff.cpp  mainServer.cpp  mainServerStrings.cpp  serverProbuff.cpp
src/libSerial/: MotorPort.cpp  SerialException.cpp  SerialPort.cpp
src/libsocketAbst/: ApplicationProtocol.cpp  Connection.cpp  ConnectionTCP.cpp  ServerSocket.cpp  Socket.cpp  SocketException.cpp
